--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                        <a href="" class="tabs-item">Факты</a>
                        <a href="" class="tabs-item">Сайты</a>
                        <a href="" class="tabs-item">
-                           <img src="img/bookmark.svg" alt="" class="bookmark-added">
+                           <img src="img/bookmark-icon.svg" alt="" class="bookmark-added">
                        </a>
                    </nav>
                    
@@ -96,9 +96,18 @@
                       </p>
                    </div>
                    <div class="subscribe">
-                       <a href="#" class="banner">
+                     <h3 class="subscribe-title">Подпишитесь на обновления</h3>
+                       <form action="#" class="subscribe-form">
+                          <input type="text" class="subscribe-input" placeholder="Ваш email">
+                          <button class="subscribe-button">
+                              <img src="img/button-check.svg" alt="Check">
+                          </button>
+                       </form>
+                        <a href="#" class="banner">
                            <img src="img/banner.jpg" alt="banner">
-                       </a>
+                       </a>  
+                      </div>
+                       
                    </div>
                </div>
                </div>
